workloads/keycloak/overlays/eks-demo/keycloak-external-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
  namespace: keycloak
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: null
